k8s/entertainment/jellyfin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups:
          - 44
          - 109
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: pvc-config
              mountPath: /config
            - name: ssd2
              mountPath: /media/SSD2
      restartPolicy: Always
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: ssd2
          hostPath:
            path: /media/SSD2
