k8s/entertainment/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: NodePort
  ports:
    - name: http
      port: 8096
  selector:
    app: jellyfin
