k8s/entertainment/jellyfin/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-system-sso@kubernetescrd,traefik-system-security@kubernetescrd'
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: jellyfin
spec:
  rules:
    - host: jellyfin.fmlab.no
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyfin.fmlab.no
      secretName: certificate-jellyfin
